[gd_scene load_steps=3 format=3 uid="uid://8eke5ddqdxni"]

[ext_resource type="Script" uid="uid://dybh653qfxsrs" path="res://Scripts/CharacterCreation/CharacterCreation.gd" id="1_i3y6d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3y6d"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)
expand_margin_left = 8.0
expand_margin_right = 8.0

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i3y6d")

[node name="BackgroundInfo" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margins" type="MarginContainer" parent="BackgroundInfo"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundInfo/Margins"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundInfo/Margins/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Background Information"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AbilityGeneration" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margins" type="MarginContainer" parent="AbilityGeneration"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="AbilityGeneration/Margins"]
layout_mode = 2

[node name="Title" type="Label" parent="AbilityGeneration/Margins/VBox"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Choose Ability Score Generation Method"
horizontal_alignment = 1

[node name="MethodOption" type="OptionButton" parent="AbilityGeneration/Margins/VBox"]
layout_mode = 2

[node name="MethodDesc" type="RichTextLabel" parent="AbilityGeneration/Margins/VBox"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="Grid" type="GridContainer" parent="AbilityGeneration/Margins/VBox"]
layout_mode = 2

[node name="StrBut" type="Button" parent="AbilityGeneration/Margins/VBox/Grid"]
layout_mode = 2
text = "Str:"

[node name="StrVal" type="Label" parent="AbilityGeneration/Margins/VBox/Grid/StrBut"]
layout_mode = 0
offset_left = 37.0
offset_top = 4.0
offset_right = 73.0
offset_bottom = 27.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DexBut" type="Button" parent="AbilityGeneration/Margins/VBox/Grid"]
layout_mode = 2
text = "Dex:"

[node name="DexVal" type="Label" parent="AbilityGeneration/Margins/VBox/Grid/DexBut"]
layout_mode = 0
offset_left = 35.0
offset_top = 4.0
offset_right = 75.0
offset_bottom = 27.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ConBut" type="Button" parent="AbilityGeneration/Margins/VBox/Grid"]
layout_mode = 2
text = "Con:"

[node name="ConVal" type="Label" parent="AbilityGeneration/Margins/VBox/Grid/ConBut"]
layout_mode = 0
offset_left = 34.0
offset_top = 4.0
offset_right = 74.0
offset_bottom = 27.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IntBut" type="Button" parent="AbilityGeneration/Margins/VBox/Grid"]
layout_mode = 2
text = "Int:"

[node name="IntVal" type="Label" parent="AbilityGeneration/Margins/VBox/Grid/IntBut"]
layout_mode = 0
offset_left = 34.0
offset_top = 4.0
offset_right = 74.0
offset_bottom = 27.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WisBut" type="Button" parent="AbilityGeneration/Margins/VBox/Grid"]
layout_mode = 2
text = "Wis:"

[node name="WisVal" type="Label" parent="AbilityGeneration/Margins/VBox/Grid/WisBut"]
layout_mode = 0
offset_left = 33.0
offset_top = 4.0
offset_right = 73.0
offset_bottom = 27.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChaBut" type="Button" parent="AbilityGeneration/Margins/VBox/Grid"]
layout_mode = 2
text = "Cha:"

[node name="ChaVal" type="Label" parent="AbilityGeneration/Margins/VBox/Grid/ChaBut"]
layout_mode = 0
offset_left = 33.0
offset_top = 4.0
offset_right = 73.0
offset_bottom = 27.0
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Tooltip" type="PanelContainer" parent="AbilityGeneration/Margins/VBox"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i3y6d")

[node name="MarginContainer" type="MarginContainer" parent="AbilityGeneration/Margins/VBox/Tooltip"]
layout_mode = 2

[node name="Label" type="Label" parent="AbilityGeneration/Margins/VBox/Tooltip/MarginContainer"]
layout_mode = 2

[node name="RollRow" type="HBoxContainer" parent="AbilityGeneration/Margins/VBox"]
layout_mode = 2

[node name="TotalLabel" type="Label" parent="AbilityGeneration/Margins/VBox/RollRow"]
layout_mode = 2
text = "Total: -"

[node name="StoreRow" type="HBoxContainer" parent="AbilityGeneration/Margins/VBox"]
layout_mode = 2

[node name="StoreButton" type="Button" parent="AbilityGeneration/Margins/VBox/StoreRow"]
layout_mode = 2
text = "Store"

[node name="RerollButton" type="Button" parent="AbilityGeneration/Margins/VBox/StoreRow"]
layout_mode = 2
text = "Roll"

[node name="RevertButton" type="Button" parent="AbilityGeneration/Margins/VBox/StoreRow"]
layout_mode = 2
text = "Revert"

[node name="Spacer" type="Control" parent="AbilityGeneration/Margins/VBox/StoreRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StoredLabel" type="Label" parent="AbilityGeneration/Margins/VBox/StoreRow"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Stored: -"
horizontal_alignment = 1

[node name="NavButtons" type="HBoxContainer" parent="AbilityGeneration/Margins/VBox"]
layout_mode = 2

[node name="BackButton" type="Button" parent="AbilityGeneration/Margins/VBox/NavButtons"]
layout_mode = 2
disabled = true
text = "Back"

[node name="NextButton" type="Button" parent="AbilityGeneration/Margins/VBox/NavButtons"]
layout_mode = 2
text = "Next â†’"

[node name="ClassChoose" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FinalizeCharacter" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
